完成前台链接内容获取部分

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ _94LIST_TITLE=标题
 _94LIST_UA=netpan
 _94LIST_ANNOUNCESWITCH=true
 _94LIST_ANNOUNCE=公告
+_94LIST_COOKIE=""
 _94LIST_VERSION=0.0.1
 
 # 数据库配置
