--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,12 @@ LOG_LEVEL=debug
 # 后台登录地址
 ADMIN_ROUTE_PREFIX={admin_path}
 
-_94LIST_TITLE=标题
 _94LIST_UA=netpan
 _94LIST_ANNOUNCESWITCH=true
 _94LIST_ANNOUNCE=公告
 _94LIST_COOKIE=""
+_94LIST_SLEEP=3
+_94LIST_MAXONCE=20
 _94LIST_VERSION=0.0.1
 
 # 数据库配置
