--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ _94LIST_VERSION=0.0.1
 
 # 数据库配置
 DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=94list
-DB_USERNAME=94list
-DB_PASSWORD=YnVZ5NYBB4MfEt1o
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
