支持完全`SSL`模式

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:rLhLPBjare0woVlnL+efjR7VemC/4wg9E/TNix9kN9A=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_SSL=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
