--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY={app_key}
 APP_DEBUG=true
 APP_URL={app_url}
+APP_SSL=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
