--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ ADMIN_ROUTE_PREFIX=/admin
 
 _94LIST_UA=netdisk
 _94LIST_ANNOUNCESWITCH=true
-_94LIST_ANNOUNCE=公告
+_94LIST_ANNOUNCE="公告"
 _94LIST_COOKIE=""
 _94LIST_SLEEP=1
 _94LIST_MAXONCE=20
