--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ ADMIN_ROUTE_PREFIX={admin_path}
 
 _94LIST_UA=netpan
 _94LIST_ANNOUNCESWITCH=true
-_94LIST_ANNOUNCE=公告
+_94LIST_ANNOUNCE="公告"
 _94LIST_COOKIE=""
 _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
