--- a/.env
+++ b/.env
@@ -22,10 +22,10 @@ _94LIST_VERSION=0.0.4
 
 # 数据库配置
 DB_CONNECTION=mysql
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=94list
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
