--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,10 @@ _94LIST_ANNOUNCE="公告"
 _94LIST_COOKIE=""
 _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
-_94LIST_VERSION=0.0.3
+_94LIST_VERSION=0.0.5
 
 # 数据库配置
-DB_CONNECTION=mysql
+DB_CONNECTION={db_type}
 DB_HOST={db_host}
 DB_PORT={db_port}
 DB_DATABASE={db_database}
