重构前端部分

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_NAME=94list-laravel
+APP_NAME=94list-laravel123
 APP_ENV=local
-APP_KEY=base64:rLhLPBjare0woVlnL+efjR7VemC/4wg9E/TNix9kN9A=
+APP_KEY=base64:VPfGuB9Ly8XY2ms9tbjypef83tuI/fMWkiWGbG2qxto=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_SSL=false
+APP_SSL=true
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,20 +12,20 @@ LOG_LEVEL=debug
 # 后台登录地址
 ADMIN_ROUTE_PREFIX=/admin
 
-_94LIST_UA=netdisk
-_94LIST_ANNOUNCESWITCH=true
-_94LIST_ANNOUNCE="公告"
-_94LIST_COOKIE=""
-_94LIST_SLEEP=1
+_94LIST_UA=netpan
+_94LIST_ANNOUNCESWITCH=false
+_94LIST_ANNOUNCE="公告[NextLine]你好[NextLine]好哦~"
+_94LIST_COOKIE="csrfToken=g9xUHDEoA7Pxc6CRSKEgRGiL; newlogin=1; BAIDUID=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1; BAIDUID_BFESS=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1"
+_94LIST_SLEEP=3
 _94LIST_MAXONCE=20
-_94LIST_VERSION=0.0.9
+_94LIST_VERSION=0.1.0
 
 # 数据库配置
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=94list
-DB_USERNAME=root
+DB_CONNECTION=sqlite
+DB_HOST=
+DB_PORT=
+DB_DATABASE=C:\xampp\htdocs\94list-laravel\database\database.sqlite
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
