--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_NAME=94list-laravel123
+APP_NAME=94list-laravel
 APP_ENV=local
-APP_KEY=base64:VPfGuB9Ly8XY2ms9tbjypef83tuI/fMWkiWGbG2qxto=
+APP_KEY=base64:oxZTWtosjwRR//Mn/DbVu9S9bkuCluDd3G9neYZ4PYc=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_SSL=true
+APP_SSL=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -18,7 +18,7 @@ _94LIST_ANNOUNCE="公告[NextLine]你好[NextLine]好哦~"
 _94LIST_COOKIE="csrfToken=g9xUHDEoA7Pxc6CRSKEgRGiL; newlogin=1; BAIDUID=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1; BAIDUID_BFESS=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1"
 _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
-_94LIST_VERSION=0.1.1
+_94LIST_VERSION=0.1.2
 
 # 数据库配置
 DB_CONNECTION=sqlite
