优化 `Docker` 安装体验

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=94list-laravel
 APP_ENV=local
-APP_KEY=base64:O3K4jOyB2iF1CM8x9t5vnSNsIXrAM4irH+0OlFTgZ5M=
-APP_DEBUG=true
+APP_KEY=base64:Q2WZGr4HbK2rOF+UPMnpASqtM8dD/UXydSSQGoXTR1c=
+APP_DEBUG=false
 APP_URL=http://localhost
 APP_SSL=false
 
@@ -13,12 +13,12 @@ LOG_LEVEL=debug
 ADMIN_ROUTE_PREFIX=/admin
 
 _94LIST_UA=netpan
-_94LIST_ANNOUNCESWITCH=false
+_94LIST_ANNOUNCESWITCH=true
 _94LIST_ANNOUNCE="公告[NextLine]你好[NextLine]好哦~"
 _94LIST_COOKIE="csrfToken=g9xUHDEoA7Pxc6CRSKEgRGiL; newlogin=1; BAIDUID=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1; BAIDUID_BFESS=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1"
 _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
-_94LIST_VERSION=0.1.2
+_94LIST_VERSION=0.1.3
 
 # 数据库配置
 DB_CONNECTION=sqlite
