--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ _94LIST_VERSION=0.1.3
 DB_CONNECTION=sqlite
 DB_HOST=
 DB_PORT=
-DB_DATABASE=C:\xampp\htdocs\94list-laravel\database\database.sqlite
+DB_DATABASE=/var/www/html/database/database.sqlite
 DB_USERNAME=
 DB_PASSWORD=
 
