--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
       ### 左侧为宿主机目录，请自行修改，右侧为容器内部目录，请勿修改
       # 当前版本配置
       - ./path/94list-laravel/html:/var/www/html
-      # 版本备份储存 (用于升级时更高版本镜像时，存放d旧版本的配置文件)
-      - ./path/94list-laravel/html_old:/var/www/html_old      
+      # 版本备份储存 (用于升级时更高版本镜像时，存放旧版本的配置文件)
+      - ./path/94list-laravel/html_old:/var/www/html_old
     # 重启策略
     restart: always
     # 环境变量
@@ -47,7 +47,7 @@ services:
       #- DB_HOST=mysql
       # 数据库端口 （Tip:"mysql" 默认端口3306）
       #- DB_PORT=3306
-      # 数据库名字 (Tip:使用 "mysql" 时，填数据库名字；使用本地sqlite时，留空即可)
+      # 数据库名字 (Tip:使用 "mysql" 时，填数据库名字；使用本地 "sqlite" 时，留空即可)
       #- DB_DATABASE=94list
       # 用户名
       #- DB_USERNAME=94list
