增加```python```更新检测

--- a/docker-compose-full.yaml
+++ b/docker-compose-full.yaml
@@ -32,6 +32,8 @@ services:
       # 使用模式0时，必须#注释或删除掉 "数据库配置" 大项，否则会出现参数被环境变量代替的情况
       # 使用模式1时，可搭配下方数据库配置一同使用
       - APP_INSTALL_MODE=1
+      # 更新开关
+      - APP_AUTO_UPDATE=true
 
       ### 基础配置
       # 网站名字
