--- a/.env
+++ b/.env
@@ -17,6 +17,15 @@ DB_DATABASE=/var/www/html/database/database.sqlite
 DB_USERNAME=
 DB_PASSWORD=
 
+MAIL_SWITCH=false
+MAIL_TO="test@qq.com"
+MAIL_HOST=smtp.163.com
+MAIL_PORT=465
+MAIL_USERNAME=test@163.com
+MAIL_PASSWORD=test
+MAIL_FROM_ADDRESS="test@163.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
 # 后台登录地址
 ADMIN_ROUTE_PREFIX=/admin
 
