新增账户过期邮件通知 #25

--- a/.env
+++ b/.env
@@ -18,13 +18,13 @@ DB_USERNAME=
 DB_PASSWORD=
 
 MAIL_SWITCH=false
-MAIL_TO="test@qq.com"
+MAIL_TO=test@qq.com
 MAIL_HOST=smtp.163.com
 MAIL_PORT=465
 MAIL_USERNAME=test@163.com
 MAIL_PASSWORD=test
-MAIL_FROM_ADDRESS="test@163.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS=test@163.com
+MAIL_FROM_NAME=94list-laravel
 
 # 后台登录地址
 ADMIN_ROUTE_PREFIX=/admin
@@ -37,4 +37,4 @@ _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
 _94LIST_PASSWORDSWITCH=false
 _94LIST_PASSWORD=123456
-_94LIST_VERSION=0.1.8
+_94LIST_VERSION=0.1.10
