新增功能当会员过期时自动重新获取是否已经到期

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=94list-laravel
 APP_ENV=local
 APP_KEY=base64:Q2WZGr4HbK2rOF+UPMnpASqtM8dD/UXydSSQGoXTR1c=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 APP_SSL=false
 
@@ -40,4 +40,4 @@ _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
 _94LIST_PASSWORDSWITCH=false
 _94LIST_PASSWORD=123456
-_94LIST_VERSION=0.2
+_94LIST_VERSION=0.2.1
