--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
   "license": "MIT",
   "require": {
     "php": "^8.1",
-    "guzzlehttp/guzzle": "^7.2",
+    "ext-curl": "*",
+    "guzzlehttp/guzzle": "^7.8",
     "laravel/framework": "^10.10",
     "laravel/sanctum": "^3.2",
-    "laravel/tinker": "^2.8",
-    "ext-curl": "*"
+    "laravel/tinker": "^2.8"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
