--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # 数据库配置
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=
 DB_PORT=
-DB_DATABASE=/var/www/html/database/database.sqlite
-DB_USERNAME=
+DB_DATABASE=94list
+DB_USERNAME=root
 DB_PASSWORD=
 
 # 邮箱配置
@@ -40,4 +40,4 @@ _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
 _94LIST_PASSWORDSWITCH=false
 _94LIST_PASSWORD=123456
-_94LIST_VERSION=0.2.5
+_94LIST_VERSION=0.2.6
