--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # 数据库配置
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=
 DB_PORT=
-DB_DATABASE=94list
-DB_USERNAME=root
+DB_DATABASE=/var/www/html/database/database.sqlite
+DB_USERNAME=
 DB_PASSWORD=
 
 # 邮箱配置
