--- a/.env.example
+++ b/.env.example
@@ -1,50 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HmFHbtVclB6jvzv0HEaoTHsyDzQbuXfdEFrDuaaEsYE=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
 APP_URL=http://localhost
-
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
-
-APP_MAINTENANCE_DRIVER=file
-APP_MAINTENANCE_STORE=database
-
-BCRYPT_ROUNDS=12
-
-LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
-
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
-
-CACHE_STORE=database
-CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
 
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
@@ -55,10 +13,14 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+_94LIST_VERSION=1.0.0
+_94LIST_SLEEP=3
+_94LIST_MAX_ONCE=20
+_94LIST_PASSWORD=
+_94LIST_ANNOUNCE=
+_94LIST_USER_AGENT=
 
-VITE_APP_NAME="${APP_NAME}"
+_94LIST_CAPTCHA_USE=
+_94LIST_CAPTCHA_VAPTCHA_VID=
+_94LIST_CAPTCHA_VAPTCHA_KEY=
+_94LIST_CAPTCHA_VAPTCHA_SCENE=0
