[*] 尝试修复获取 `dlink` 失败的问题

--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # 数据库配置
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=
 DB_PORT=
-DB_DATABASE=/var/www/html/database/database.sqlite
-DB_USERNAME=
+DB_DATABASE=94list
+DB_USERNAME=root
 DB_PASSWORD=
 
 # 邮箱配置
@@ -35,7 +35,7 @@ ADMIN_ROUTE_PREFIX=/admin
 _94LIST_UA=LogStatistic
 _94LIST_ANNOUNCESWITCH=false
 _94LIST_ANNOUNCE="公告[NextLine]你好[NextLine]好哦~"
-_94LIST_COOKIE=""
+_94LIST_COOKIE="csrfToken=g9xUHDEoA7Pxc6CRSKEgRGiL; newlogin=1; BAIDUID=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1; BAIDUID_BFESS=7A4FB79EA7BCED9674B87CB0BD6691A4:FG=1"
 _94LIST_SLEEP=3
 _94LIST_MAXONCE=20
 _94LIST_PASSWORDSWITCH=false
