--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,25 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:HmFHbtVclB6jvzv0HEaoTHsyDzQbuXfdEFrDuaaEsYE=
+APP_KEY=base64:uXKgvz9P8KCytUmXaq8mntdhk8HM2eFCTJV/uVMjAoM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-MAIL_MAILER=log
+MAIL_SWITCH=false
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_USERNAME=username
+MAIL_PASSWORD=password
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=hello@example.com
+MAIL_FROM_NAME=Example
+MAIL_TO_ADDRESS=hello@example.com
+MAIL_TO_NAME=Example
 
 _94LIST_VERSION=1.0.0
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=
 _94LIST_ANNOUNCE=
-_94LIST_USER_AGENT=
-
-_94LIST_CAPTCHA_USE=
-_94LIST_CAPTCHA_VAPTCHA_VID=
-_94LIST_CAPTCHA_VAPTCHA_KEY=
-_94LIST_CAPTCHA_VAPTCHA_SCENE=0
+_94LIST_USER_AGENT=LogStatistic
+_94LIST_NEED_INV_CODE=true
+_94LIST_WHITELIST_MODE=false
