[*] 修复下载文件时账号被封禁错误的处理

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=94list-laravel
 APP_ENV=local
 APP_KEY=base64:uXKgvz9P8KCytUmXaq8mntdhk8HM2eFCTJV/uVMjAoM=
 APP_DEBUG=true
@@ -15,7 +15,7 @@ MAIL_FROM_NAME=Example
 MAIL_TO_ADDRESS=hello@example.com
 MAIL_TO_NAME=Example
 
-_94LIST_VERSION=1.0.3
+_94LIST_VERSION=1.0.4
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=
