[*] 去除默认授权服务器(默认授权已停用,不再更新,保留到7月份) [*] 更换默认UA

--- a/.env.example
+++ b/.env.example
@@ -15,15 +15,15 @@ MAIL_FROM_NAME=Example
 MAIL_TO_ADDRESS=hello@example.com
 MAIL_TO_NAME=Example
 
-_94LIST_VERSION=1.1.9
+_94LIST_VERSION=1.1.10
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=""
 _94LIST_ANNOUNCE="123"
-_94LIST_USER_AGENT="netdisk;7.42.0.5;PC;PC-Windows;10.0.18362;WindowsBaiduYunGuanJia"
+_94LIST_USER_AGENT="netdisk;7.42.0.5;PC"
 _94LIST_NEED_INV_CODE=true
 _94LIST_WHITELIST_MODE=false
 _94LIST_SHOW_COPYRIGHT=true
 
-_94LIST_MAIN_SERVER=https://bd.huankong.top
+_94LIST_MAIN_SERVER=空
 _94LIST_CODE=空
