--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ MAIL_FROM_NAME=Example
 MAIL_TO_ADDRESS=hello@example.com
 MAIL_TO_NAME=Example
 
-_94LIST_VERSION=1.1.12
+_94LIST_VERSION=1.1.13
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=""
@@ -27,3 +27,5 @@ _94LIST_SHOW_COPYRIGHT=true
 
 _94LIST_MAIN_SERVER=空
 _94LIST_CODE=空
+
+_94LIST_PARSE_MODE=1
