--- a/.env.example
+++ b/.env.example
@@ -15,17 +15,16 @@ MAIL_FROM_NAME=Example
 MAIL_TO_ADDRESS=hello@example.com
 MAIL_TO_NAME=Example
 
-_94LIST_VERSION=1.1.16
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=""
-_94LIST_ANNOUNCE="123"
+_94LIST_ANNOUNCE="测试公告"
 _94LIST_USER_AGENT="netdisk;7.42.0.5;PC"
 _94LIST_NEED_INV_CODE=true
 _94LIST_WHITELIST_MODE=false
 _94LIST_SHOW_COPYRIGHT=true
-
+_94LIST_CUSTOM_COPYRIGHT="本项目半开源, 项目地址: https://github.com/huankong233/94list-laravel"
 _94LIST_MAIN_SERVER=空
 _94LIST_CODE=空
-
 _94LIST_PARSE_MODE=1
+_94LIST_MAX_FILESIZE=536870912000
