[+] 分离助手函数 [+] 卡密模式开关 [+] 购买卡密按钮

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ MAIL_FROM_NAME=Example
 MAIL_TO_ADDRESS=hello@example.com
 MAIL_TO_NAME=Example
 
-_94LIST_VERSION=1.1.27
+_94LIST_VERSION=1.1.28
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=""
@@ -30,3 +30,5 @@ _94LIST_CODE=空
 _94LIST_PARSE_MODE=1
 _94LIST_MAX_FILESIZE=536870912000
 _94LIST_MAX_SINGLE_FILESIZE=0
+_94LIST_TOKEN_MODE=true
+_94LIST_BUTTON_LINK="blank"
