--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ MAIL_FROM_NAME=Example
 MAIL_TO_ADDRESS=hello@example.com
 MAIL_TO_NAME=Example
 
-_94LIST_VERSION=1.3.6
+_94LIST_VERSION=1.3.7
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=""
@@ -43,3 +43,4 @@ _94LIST_BUTTON_LINK="blank"
 _94LIST_LIMIT_CN=true
 _94LIST_LIMIT_PROV=true
 _94LIST_SHOW_LOGIN_BUTTON=true
+_94LIST_TOKEN_BIND_IP=false
