--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ MAIL_FROM_NAME=Example
 MAIL_TO_ADDRESS=hello@example.com
 MAIL_TO_NAME=Example
 
-_94LIST_VERSION=1.3.21
+_94LIST_VERSION=1.3.22
 _94LIST_SLEEP=3
 _94LIST_MAX_ONCE=20
 _94LIST_PASSWORD=""
@@ -44,3 +44,5 @@ _94LIST_LIMIT_CN=true
 _94LIST_LIMIT_PROV=false
 _94LIST_SHOW_LOGIN_BUTTON=true
 _94LIST_TOKEN_BIND_IP=false
+HKLIST_PROXY_SERVER=
+HKLIST_PROXY_PASSWORD=
